# srgan-rust

./: .dockerignore  .env.example  .valgrind-suppressions  CRITICAL_FIXES_GUIDE.md  Cargo.toml  Claude.md  Dockerfile  ENHANCEMENT_PLAN.md  FEATURE_ENHANCEMENT_SUMMARY.md  OPTIMIZATION_REPORT.md  PARALLEL_IMPLEMENTATION_SUMMARY.md  PARALLEL_PROCESSING_GUIDE.md  PYTORCH_PARSER_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  THREAD_SAFETY.md  THREAD_SAFETY_IMPROVEMENTS.md  THREAD_SAFE_ARCHITECTURE.md  TRAINING_GUIDE.md  USAGE.md  benchmark_allocations.sh  build.rs  deploy.sh  docker-compose.yml  download_training_images.sh  fix_critical_issues.sh  full_model.rsr  my_model.rsr  nginx.conf  openapi.yaml  overview.md  project_description.md  quick_train.sh  todo.md  verify_thread_safety  verify_thread_safety.rs
.github/workflows/: ci.yml  release.yml  thread-safety.yml
benches/: pytorch_parser_bench.rs  thread_safety_bench.rs
deploy/k8s/: deployment.yaml  hpa.yaml
deploy/terraform/: main.tf
docs/: API.md  DEPLOYMENT.md  MODEL_CONVERTER.md  PRICING.md  alert-rules.yaml  grafana-dashboard.json
examples/: README.md  batch_process.sh  benchmark.sh  create_training_dataset.py  download_datasets.sh  test_allocator.rs  thread_safe_demo.rs  thread_safety_proof.rs  training_config.toml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
models/: anime.json  default.json  esrgan.json  natural.json  real-esrgan-anime.json  real-esrgan-x2.json  real-esrgan.json  waifu2x.json
scripts/: test-thread-safety.sh
sdk/: README.md  package.json  tsconfig.cjs.json  tsconfig.json
sdk/go/: example_test.go  go.mod  srgan.go
sdk/js/: .npmignore  README.md  jest.config.js  package.json  tsconfig.json
sdk/js/src/: index.ts  types.ts
sdk/js/tests/: client.test.ts
sdk/python/: README.md  pyproject.toml  srgan_client.py
sdk/python/examples/: basic.py
sdk/python/srgan_sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/src/: index.ts
src/: aligned_crop.rs  analytics.rs  auto_enhance.rs  cdn.rs  checkpoint.rs  cli.rs  config.rs  config_file.rs  constants.rs  detection.rs  docs.rs  ensemble.rs  error.rs  error_handling_tests.rs  error_recovery.rs  error_recovery_tests.rs  gpu.rs  image_classifier.rs  image_pipeline.rs  init.rs  lib.rs  logging.rs  main.rs  metrics_wrapper.rs  model_converter.rs  model_downloader.rs  model_manager.rs  model_registry.rs  model_version.rs  model_versioning.rs  monitoring.rs  network.rs  openapi.rs  output_options.rs  parallel.rs  preprocessing.rs  profiling.rs  profiling_tests.rs  psnr.rs  quality.rs  (+19 more)
src/api/: admin.rs  auth.rs  batch.rs  billing.rs  jobs.rs  middleware.rs  mod.rs  org.rs  rate_limit.rs  rate_limit_dashboard.rs  upscale.rs
src/benchmarks/: mod.rs  parallel_bench.rs
src/billing/: dunning.rs  mod.rs  plans.rs  quota.rs  stripe.rs
src/commands/: batch.rs  batch_improved.rs  benchmark.rs  benchmark_utils.rs  classify.rs  compare.rs  completions.rs  convert_model.rs  download_model.rs  download_models.rs  downscale.rs  generate_config.rs  mod.rs  models.rs  parallel_benchmark.rs  profile_memory.rs  psnr.rs  quantise.rs  server.rs  set_width.rs  train.rs  train_prescaled.rs  upscale.rs  upscale_gpu.rs  video.rs
src/inference/: batch.rs  mod.rs
src/model_converter/: common.rs  keras.rs  keras_simple.rs  onnx.rs  onnx_loader.rs  onnx_simple.rs  pytorch.rs  tensorflow.rs  tensorflow_simple.rs  tests.rs  waifu2x_converter.rs
src/models/: mod.rs  real_esrgan.rs  waifu2x.rs
src/static/: compare.html  demo.html  index.html
src/training/: checkpoint.rs  data_loader.rs  mod.rs  trainer_simple.rs  validation_simple.rs
src/utils/: command_helpers.rs  error_helpers.rs  file_io.rs  mod.rs
src/wasm/: mod.rs  preview.rs  wasm_shim.rs
src/web/: docs.rs  mod.rs  observability.rs  queue_dashboard.rs
src/webhooks/: mod.rs  stream.rs
static/: docs.html  preview-demo.html
tests/: batch_tests.rs  benchmark_tests.rs  config_tests.rs  convert_model_cli_tests.rs  error_handling_test.rs  error_recovery_integration.rs  error_tests.rs  integration_tests.rs  lib.rs  memory_allocator_stress_tests.rs  model_converter_test.rs  model_converter_tests.rs  parallel_test.rs  profiling_tests.rs  psnr_tests.rs  pytorch_advanced_tests.rs  pytorch_integration_tests.rs  pytorch_minimal_test.rs  pytorch_parser_tests.rs  security_tests.rs  simple_thread_test.rs  test_helpers.rs  thread_safety_loom.rs  thread_safety_stress.rs  thread_safety_tests.rs  video_tests.rs  waifu2x_tests.rs  web_server_tests.rs
wasm/: Cargo.toml  build.sh  index.html  package.json
wasm/src/: lib.rs
