[package]
name = "srgan-rust"
version = "0.2.0"
authors = ["ktheindifferent"]
edition = "2018"

[dependencies]
rand = "0.5"
clap = "2"
image = "0.19"
ndarray = {version = "0.11.2", features = ["serde-1"] }
serde = "1"
serde_derive = "1"
bincode = "1.3.3"
xz2 = "0.1"
byteorder = "1"
indexmap = "1"
smallvec = "0.6"
alumina = { version = "0.3.0" }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
chrono = "0.4"
toml = "0.5"
serde_json = "1.0"
rayon = "1.5"
lazy_static = "1.4"
ctrlc = "3.4"
thread_local = "1.1"
serde-pickle = "1.1"
num-bigint = "0.4"
num-traits = "0.2"
# For TensorFlow SavedModel parsing
prost = "0.12"
prost-types = "0.12"
# For ONNX model parsing  
protobuf = "3.3"
# For Keras/H5 model parsing
hdf5 = { version = "0.8", optional = true }

[features]
default = []
keras-support = ["hdf5"]

[dev-dependencies]
tempfile = "3"
criterion = "0.3"

[[bench]]
name = "thread_safety_bench"
harness = false
