[package]
name = "srgan-rust"
version = "0.2.0"
authors = ["ktheindifferent"]
edition = "2018"

[dependencies]
rand = "0.5"
clap = "2"
image = "0.19"
ndarray = {version = "0.11.2", features = ["serde-1"] }
serde = "1"
serde_derive = "1"
bincode = "1.3.3"
xz2 = "0.1"
byteorder = "1"
indexmap = "1"
smallvec = "0.6"
alumina = { version = "0.3.0" }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
chrono = "0.4"
toml = "0.5"
serde_json = "1.0"
rayon = "1.5"
lazy_static = "1.4"
ctrlc = "3.4"
thread_local = "1.1"
serde-pickle = "1.1"
num-bigint = "0.4"
num-traits = "0.2"

# New dependencies for error recovery and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
backtrace = "0.3"
tokio = { version = "1", features = ["time", "sync"] }
async-trait = "0.1"
dashmap = "5.5"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
sys-info = "0.9"
uuid = { version = "1.4", features = ["v4"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
criterion = "0.3"

[[bench]]
name = "thread_safety_bench"
harness = false
