[package]
name = "srgan-rust"
version = "0.2.0"
authors = ["ktheindifferent"]
edition = "2018"

[dependencies]
rand = "0.8"
clap = "2"
image = "0.19"
ndarray = { version = "0.11.2", features = ["serde-1"] }
serde = "1"
serde_derive = "1"
bincode = "1.3.3"
xz2 = "0.1"
byteorder = "1"
indexmap = "1"
smallvec = "1.11"
alumina = { version = "0.3.0" }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
chrono = "0.4"
toml = "0.5"
serde_json = "1.0"
rayon = "1.5"
lazy_static = "1.4"
ctrlc = "3.4"
thread_local = "1.1"
serde-pickle = "1.1"
num-bigint = "0.4"
num-traits = "0.2"
zip = "0.6"
# For TensorFlow SavedModel parsing
prost = "0.12"
prost-types = "0.12"
# For ONNX model parsing  
protobuf = "3.3"
# For Keras/H5 model parsing
hdf5 = { version = "0.8", optional = true }
# New dependencies for error recovery and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
backtrace = "0.3"
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }
kamadak-exif = "0.6"
async-trait = "0.1"
dashmap = "5.5"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
sys-info = "0.9"
uuid = { version = "1.4", features = ["v4"] }
base64 = "0.21"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ureq = "2"
glob = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
jsonwebtoken = "9"
bcrypt = "0.15"

[features]
default = []
keras-support = ["hdf5"]

[dev-dependencies]
tempfile = "3"
criterion = "0.3"
proptest = "1.0"
quickcheck = "1.0"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[[bin]]
name = "srgan-upscale"
path = "src/bin/upscale.rs"

[[bin]]
name = "srgan"
path = "src/bin/srgan_cli.rs"

[[bench]]
name = "thread_safety_bench"
harness = false

[[bench]]
name = "pytorch_parser_bench"
harness = false
