[package]
name = "srgan-wasm-preview"
version = "0.1.0"
edition = "2021"
description = "WASM-based bilinear upscaling preview for SRGAN-Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "ImageData",
] }

[profile.release]
opt-level = "s"
lto = true
