[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srgan-sdk"
version = "0.1.0"
description = "Python SDK for the SRGAN-Rust image upscaling API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["srgan", "super-resolution", "image", "upscaling", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["srgan_sdk"]
