[package]
name = "srgan-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for the SRGAN Rust image upscaling API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
